Fixup leftover CSS references to glitch-soc's now-removed collapsed post feature, in favor of the upstream version

--- a/app/javascript/flavours/glitch/styles/mastodon-gekka/diff.scss
+++ b/app/javascript/flavours/glitch/styles/mastodon-gekka/diff.scss
@@ -629,7 +629,7 @@ html {
   }
 }
 
-.status.collapsed .status__content::after {
+.status__content .status__content.status__content--collapsed::after {
   background: linear-gradient(
     rgba(color.adjust($ui-base-color, $lightness: 13%), 0),
     rgba(color.adjust($ui-base-color, $lightness: 13%), 1)
